--- a/app/assets/stylesheets/Features/EditCase.scss
+++ b/app/assets/stylesheets/Features/EditCase.scss
@@ -2,6 +2,9 @@
   &-body {
     flex: 1;
     display: flex;
-    column-gap: $spacing3;
+
+    > * + * {
+      margin-left: $spacing3;
+    }
   }
 }
