--- a/app/assets/stylesheets/Shared/Main.scss
+++ b/app/assets/stylesheets/Shared/Main.scss
@@ -10,7 +10,6 @@
     display: flex;
     align-items: flex-end;
     flex-wrap: wrap;
-    gap: $spacing3;
     margin-bottom: $spacing3;
   }
 
@@ -27,11 +26,15 @@
 
   &-filters {
     width: 100%;
+    margin-top: $spacing3;
     padding: 0 $spacing6;
   }
 
   &-actions {
     display: flex;
-    gap: $spacing5;
+
+    > * {
+      margin-left: $spacing3;
+    }
   }
 }
