--- a/app/assets/stylesheets/Shared/Panel.scss
+++ b/app/assets/stylesheets/Shared/Panel.scss
@@ -1,13 +1,16 @@
 // -- utilities --
-%u-flow {
+%u-panel-flow {
   display: flex;
   flex-direction: column;
-  gap: $spacing1;
+
+  > .Panel-section + .Panel-section {
+    margin-top: $spacing1;
+  }
 }
 
 // -- main --
 .Panel {
-  @extend %u-flow;
+  @extend %u-panel-flow;
   padding: $spacing1;
 
   // -- elements --
@@ -15,7 +18,7 @@
     display: none;
 
     &.is-visible {
-      @extend %u-flow;
+      @extend %u-panel-flow;
     }
   }
 
@@ -53,12 +56,17 @@
     flex: 1;
     display: flex;
     align-items: flex-end;
-    gap: $spacing5;
+
+    > * + * {
+      margin-left: $spacing5;
+    }
   }
 
   // -- variants --
   &--read, &--read &-tab {
-    gap: $spacing2;
+    > .Panel-section + .Panel-section {
+      margin-top: $spacing2;
+    }
   }
 
   &--read &-section {
